--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,8 @@
         "laravel/framework": "5.2.*",
         "laravelcollective/html": "5.2.*",
         "omnipay/paypal": "~2.0",
-        "doctrine/dbal": "2.5.4"
+        "doctrine/dbal": "2.5.4",
+        "guzzlehttp/guzzle": "~5.3|~6.0"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
