--- a/.env.copy
+++ b/.env.copy
@@ -8,7 +8,7 @@ DB_HOST=127.0.0.1
 DB_PORT=3306
 DB_DATABASE=offbroadway
 DB_USERNAME=obct
-DB_PASSWORD=1qaz@WSX
+DB_PASSWORD=SECRET
 
 CACHE_DRIVER=file
 SESSION_DRIVER=file
@@ -22,9 +22,9 @@ MAIL_DRIVER=mailgun
 MAIL_HOST=smtp.mailgun.org
 MAIL_PORT=25
 MAIL_USERNAME=postmaster@offbroadwaykids.net
-MAIL_PASSWORD=e92f420fb93200d28beb68c013bb9679
+MAIL_PASSWORD=SECRET
 MAIL_ENCRYPTION=null
 
 MAILGUN_DOMAIN=offbroadwaykids.net
-MAILGUN_SECRET=key-65e517434ad6861dfbf747bf5a9084b3
+MAILGUN_SECRET=SECRET
 
