--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
         "omnipay/paypal": "~2.0",
         "doctrine/dbal": "2.5.4",
         "guzzlehttp/guzzle": "~5.3|~6.0",
-        "chromabits/foundation-pagination": "*"
+        "chromabits/foundation-pagination": "*",
+        "socialiteproviders/paypal": "*"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
