--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "gulp-notify": "^2.2.0"
   },
   "dependencies": {
-    "laravel-elixir": "^4.0.0",
-    "bootstrap-sass": "^3.0.0"
+    "axios": "^0.15.3",
+    "bootstrap-sass": "^3.0.0",
+    "laravel-elixir": "^4.0.0"
   }
 }
